--- a/branches/MonoGame/Projektimallit/Xamarin/templates/PerusPeli.xpt.xml
+++ b/branches/MonoGame/Projektimallit/Xamarin/templates/PerusPeli.xpt.xml
@@ -21,7 +21,7 @@
 
           <References>
              <Reference type = "Package" refto = "Jypeli"/>
-             <Reference type = "Package" refto = "Jypeli.MonoGame.Framework"/>
+             <Reference type = "Package" refto = "MonoGame.Framework"/>
              <Reference type = "Package" refto = "System" />
              <Reference type = "Package" refto = "System.Xml" />
              <Reference type = "Package" refto = "System.Core" />
