--- a/branches/MonoGame/Projektimallit/Xamarin/templates/FysiikkaPeli.Physics2d.xpt.xml
+++ b/branches/MonoGame/Projektimallit/Xamarin/templates/FysiikkaPeli.Physics2d.xpt.xml
@@ -5,10 +5,10 @@
 
     <TemplateConfiguration>
 		<_Name>FysiikkaPeli (Physics2d)</_Name>
-		<_Category>C#/Jypeli</_Category>
+		<Category>other/net/Jypeli</Category>
 		<Icon>FysiikkaPeli-project</Icon>
 		<LanguageName>C#</LanguageName>
-		<_Description>Fysiikkapeli joka käyttää Physics2d-fysiikkamoottoria. Physics game with Physics2d engine.</_Description>
+		<_Description>Fysiikkapeli joka käyttää Physics2d-fysiikkamoottoria ja OpenGL-grafiikkaa. Physics game with Physics2d engine and OpenGL graphics.</_Description>
 	</TemplateConfiguration>
 
    <Options>
