--- a/branches/MonoGame/Projektimallit/Xamarin/templates/Tasohyppelypeli.xpt.xml
+++ b/branches/MonoGame/Projektimallit/Xamarin/templates/Tasohyppelypeli.xpt.xml
@@ -5,10 +5,10 @@
 
     <TemplateConfiguration>
 		<_Name>Tasohyppelypeli (Physics2d)</_Name>
-		<_Category>C#/Jypeli</_Category>
+		<Category>other/net/Jypeli</Category>
 		<Icon>Tasohyppelypeli-project</Icon>
 		<LanguageName>C#</LanguageName>
-		<_Description>Peli, jossa on valmiina tasohyppelyhahmo ja tasoja. Platform game template.</_Description>
+		<_Description>Peli, jossa on valmiina tasohyppelyhahmo ja tasoja. Käyttää OpenGL-grafiikkaa ja Physics2d-fysiikkamoottoria. Platform game template. Uses OpenGL graphics and Physics2d physics engine.</_Description>
 	</TemplateConfiguration>
 
    <Options>
