--- a/branches/MonoGame/Projektimallit/Xamarin-NuGet/Jypeli.Linux/templates/Tasohyppelypeli.xpt.xml
+++ b/branches/MonoGame/Projektimallit/Xamarin-NuGet/Jypeli.Linux/templates/Tasohyppelypeli.xpt.xml
@@ -1,46 +1,50 @@
 <?xml version="1.0"?>
-<Template originator   = "Tomi Karppinen"
-          created      = "2016/09/28"
-          lastModified = "2016/09/28">
+<Template
+		originator		= "Tomi Karppinen"
+		created			= "2016/09/28"
+		lastModified	= "2016/10/06">
 
-    <TemplateConfiguration>
+	<TemplateConfiguration>
 		<_Name>Tasohyppelypeli (Physics2d)</_Name>
-		<Category>jypeli/windows/directx</Category>
+		<Category>jypeli/linux/pohjat</Category>
 		<Icon>Tasohyppelypeli-project</Icon>
 		<LanguageName>C#</LanguageName>
-		<_Description>Peli Windowsille, jossa on valmiina tasohyppelyhahmo ja tasoja. Käyttää Physics2d-fysiikkamoottoria. Platform game template for Windows. Uses Physics2d physics engine.</_Description>
+		<_Description>Peli Linuxille, jossa on valmiina tasohyppelyhahmo ja tasoja. Käyttää Physics2d-fysiikkamoottoria. Platform game template for Linux. Uses Physics2d physics engine.</_Description>
 	</TemplateConfiguration>
 
-   <Options>
-      <StartupProject>${ProjectName}</StartupProject>
-   </Options>
+	<Options>
+		<StartupProject>${ProjectName}</StartupProject>
+	</Options>
 
-    <Combine name = "${ProjectName}" directory = ".">
-       <Project name = "${ProjectName}" directory = ".">
-          <Options/>
+	<Combine name="${ProjectName}" directory=".">
+		<Project name="${ProjectName}" directory=".">
+			<Options />
 
-          <References>
-             <Reference type = "Package" refto = "Jypeli"/>
-             <Reference type = "Package" refto = "Jypeli.Physics2d"/>
-             <Reference type = "Package" refto = "MonoGame.Framework"/>
-             <Reference type = "Package" refto = "System" />
-             <Reference type = "Package" refto = "System.Xml" />
-             <Reference type = "Package" refto = "System.Core" />
-          </References>
+			<References>
+				<Reference type="Gac" refto="System" />
+				<Reference type="Gac" refto="System.Xml" />
+				<Reference type="Gac" refto="System.Core" />
+			</References>
 
-          <Files>
-             <FileTemplateReference TemplateID="CSharpAssemblyInfo" name="AssemblyInfo.cs" />
-             <File name="${ProjectName}.cs" src="Tasohyppelypeli/Peli.cs" />
-             <File name="Ohjelma.cs" src="PerusPeli/Ohjelma.cs" />
-             <RawFile name="Icon.png" src="Tasohyppelypeli/Icon-md.png" />
-             <Directory name="Content">
-             	<RawFile name="kentta1.txt" src="Tasohyppelypeli/Content/kentta1.txt" BuildAction="Content" />
-             	<RawFile name="norsu.png" src="Tasohyppelypeli/Content/norsu.png" BuildAction="Content" />
-             	<RawFile name="tahti.png" src="Tasohyppelypeli/Content/tahti.png" BuildAction="Content" />
-             	<RawFile name="maali.wav" src="Tasohyppelypeli/Content/maali.wav" BuildAction="Content" />
-             </Directory>
-          </Files>
-       </Project>
-    </Combine>
+			<Packages>
+				<Package id="Jypeli.Linux" />
+				<Package id="Jypeli.Physics2d.Linux" />
+			</Packages>
+
+			<Files>
+				<FileTemplateReference TemplateID="CSharpAssemblyInfo" name="AssemblyInfo.cs" />
+				<File name="${ProjectName}.cs" src="Tasohyppelypeli/Peli.cs" />
+				<File name="Ohjelma.cs" src="PerusPeli/Ohjelma.cs" />
+				<RawFile name="Icon.png" src="Tasohyppelypeli/Icon-md.png" />
+				<RawFile name="OpenTK.dll.config" src="lib/OpenTK.dll.config" CopyToOutputDirectory="PreserveNewest" />
+				<RawFile name="Tao.Sdl.dll.config" src="lib/Tao.Sdl.dll.config" CopyToOutputDirectory="PreserveNewest" />
+				<Directory name="Content">
+					<RawFile name="kentta1.txt" src="Tasohyppelypeli/Content/kentta1.txt" BuildAction="Content" CopyToOutputDirectory="PreserveNewest" />
+					<RawFile name="norsu.png" src="Tasohyppelypeli/Content/norsu.png" BuildAction="Content" CopyToOutputDirectory="PreserveNewest" />
+					<RawFile name="tahti.png" src="Tasohyppelypeli/Content/tahti.png" BuildAction="Content" CopyToOutputDirectory="PreserveNewest" />
+					<RawFile name="maali.wav" src="Tasohyppelypeli/Content/maali.wav" BuildAction="Content" CopyToOutputDirectory="PreserveNewest" />
+				</Directory>
+			</Files>
+		</Project>
+	</Combine>
 </Template>
-
